Changed the faq sytling so that they are now responsive and look good on mobile. Need to fixing spacing now

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -482,6 +482,13 @@ a{
 
 	}
 
+	.\34 u2, .\34 u2\24 {
+		width: 25%;
+		clear: none;
+		margin-left: 0;
+
+	}
+
 	.\33 u, .\33 u\24 {
 		width: 25%;
 		clear: none;
@@ -544,7 +551,7 @@ a{
 	}
 
 	.\-4u {
-		margin-left: 33.33333%;
+		margin-left: 33.333333%;
 	}
 
 	.\-3u {
